src/test/ui/coercion/coercion-slice.stderr
error[E0308]: mismatched types
  --> $DIR/coercion-slice.rs:4:21
   |
LL |     let _: &[i32] = [0];
   |                     ^^^
   |                     |
   |                     expected &[i32], found array of 1 element
   |                     help: consider borrowing here: `&[0]`
   |
   = note: expected reference `&[i32]`
                  found array `[{integer}; 1]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
